fix: use margin instead of padding to prevent overflow

--- a/src/components/ItemGrid/ItemGrid.css
+++ b/src/components/ItemGrid/ItemGrid.css
@@ -71,7 +71,7 @@
 /* dashboard item - content */
 
 .dashboard-item-content {
-    padding: 0 4px 4px;
+    margin: 0 4px 4px;
     overflow: auto;
 }
 
